Fix: Add z-index to gaveover elements in screen

--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,7 @@
 
 #gameoverscreen > * {
   width: 100%;
+  z-index: 1;
 }
 
 /*/////////////////////////////////////////////     GAMEOVER HEADER     //////////////////////////////////////////////////////////////////////*/
